--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,7 @@
 VITE_SERVER_DOMAIN=http://localhost:3000
+VITE_API_KEY="AIzaSyAUrPp4PFqAIqarWw_W5ASRTRls4Hl-eH0"
+VITE_AUTH_DOMAIN="react-blogging-52b70.firebaseapp.com"
+VITE_PROJECT_ID="react-blogging-52b70"
+VITE_MESSAGING_SENDER_ID="551502308053"
+VITE_STORAGE_BUCKET="react-blogging-52b70.appspot.com"
+VITE_APP_ID="1:551502308053:web:3b942ba7096bc6f555b85c"
